--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <header>
         <meta name="apple-mobile-web-app-title" content="AppTitle">
-        <link rel="apple-touch-icon" href="IconApp.png">
-        <title>Ticket</Ticket></header>
+            <link rel="apple-touch-startup-image" href="IconApp.png">
+                    </header>
     <body>
         <h1>Hello World</h1>
     </body>
