--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
     <header>
         <meta name="apple-mobile-web-app-title" content="AppTitle">
-            <link rel="apple-touch-startup-image" href="IconApp.png">
+            <link rel="icon" type="image/png" href="https://cdn.css-tricks.com/favicon-16x16.png" sizes="16x16">
+                <link rel="icon" type="image/png" href="https://cdn.css-tricks.com/favicon-32x32.png" sizes="32x32">
+                    <link rel="icon" type="image/png" href="https://cdn.css-tricks.com/favicon-96x96.png" sizes="96x96">
                     </header>
     <body>
         <h1>Hello World</h1>
